# ta-gostudent

./: .gitignore  README.md  generate_data.py  gostudent.py  pyproject.toml  test_gostudent.py  transform.py
data/input/: tutors_info.csv
docs/: assignment.md
output/: DO_NOT_DELETE
sql/: 00_setup_database.sql  01_most_popular_lessons.sql  02_lessons_time_per_month_this_year.sql
